--- a/app/src/main/res/menu/packets_menu.xml
+++ b/app/src/main/res/menu/packets_menu.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    tools:context=".activities.MainActivity">
     <item
         android:id="@+id/add_packet"
         android:orderInCategory="100"
