--- a/app/src/main/res/layout/activity_streaming_error.xml
+++ b/app/src/main/res/layout/activity_streaming_error.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_streaming_error"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -12,7 +11,6 @@
     tools:context="cz.honzamrazek.sensorstreamer.StreamingErrorActivity">
 
     <TextView
-        android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/message" />
@@ -21,6 +19,5 @@
         android:text="@string/dismiss"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="onDismiss"
-        android:id="@+id/button2" />
+        android:onClick="onDismiss" />
 </LinearLayout>
